# chemnavigator-mcp

./: README.md  pyproject.toml
src/chemnavigator_mcp/: __init__.py  __main__.py  config.py  jobs.py  run_discovery.py  serialization.py  server.py
src/chemnavigator_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/chemnavigator_mcp/tools/: analysis.py  database.py  environment.py  molecules.py  orchestration.py  quantum.py
