[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemnavigator-mcp"
version = "0.1.0"
description = "MCP server for ChemNavigator photocatalyst design-rule discovery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ChemNavigator Contributors" }]
keywords = ["mcp", "photocatalyst", "chemnavigator", "dftb"]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
chemnavigator-mcp = "chemnavigator_mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-org/chemnavigator-mcp"
ChemNavigator = "https://github.com/your-org/chemnavigator"

[tool.setuptools.packages.find]
where = ["src"]
